crates/pyenum-derive/tests/ui/fail/bad_base.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
#[pyenum(base = "NotARealBase")]
pub enum Bad {
    A,
    B,
}

fn main() {}
